# file_explorer

./: Cargo.toml  build.rs
data/: icons.gresource.xml
src/: lib.rs  main.rs  menubar.rs  shortcuts.rs
src/core/: errors.rs  mod.rs
src/ui/: item.rs  mod.rs  styles.rs  top_panel.rs
src/ui/items_box/: init.rs  input.rs  mod.rs  output.rs
src/ui/items_box/item/: init.rs  input.rs  mod.rs  output.rs
src/ui/top_panel/: init.rs  input.rs  mod.rs  output.rs
styles/: index.css
