[package]
name = "file_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glib-build-tools = "0.21.0"

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_16"] }
relm4 = { version = "0.9.1", features = ["libadwaita"] }
open = "5.3.2"
tokio = { version = "1.47.1", features = ["fs"] }
tracker = "0.2.2"
anyhow = "1.0.99"
