[package]
name = "file_explorer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glib-build-tools = "0.22.0"

[dependencies]
relm4 = { version = "0.10.1", features = ["libadwaita"] }
open = "5.3.3"
tokio = { version = "1.49.0", features = ["fs"] }
tracker = "0.2.2"
anyhow = "1.0.100"
